--- a/src/app/pages/components/carts/default-carts/default-carts.component.html
+++ b/src/app/pages/components/carts/default-carts/default-carts.component.html
@@ -2,7 +2,7 @@
   <div
     class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
   >
-    <div class="header-title block w-full m-3">
+    <div class="header-title block w-full ">
       <h3>{{ "cartsForm.header" | transloco }}</h3>
     </div>
     <div class="block m-3 justify-content-center">
@@ -10,7 +10,7 @@
 
       </div>
       <div class="card flex justify-content-center">
-        <h3>{{ "cartsForm.title" | transloco }}</h3>
+        <i class="pi pi-shopping-cart" style="font-size: 50px;"></i>
       </div>
       <div class="card flex justify-content-center text-xl">
         <h6>
