--- a/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
@@ -1,17 +1,20 @@
-<div class="container">
-  <div class="column">
+<div class="container w-full">
+  <div class="column ">
     <a [routerLink]="['user-info']">
       <div>
+        <i class="pi pi-user"></i>
         {{'accountForm.userInfoPanel' | transloco}}
       </div>
     </a>
     <a [routerLink]="['change-password']">
       <div>
+        <i class="pi pi-lock"></i>
         {{'accountForm.changePassPanel' | transloco}}
       </div>
     </a>
     <a [routerLink]="['user-contact']">
       <div>
+        <i class="pi pi-phone"></i>
         {{'accountForm.contactPanel' | transloco}}
       </div>
     </a>
