--- a/src/app/pages/components/account/account-sidebar/account-sidebar.component.scss
+++ b/src/app/pages/components/account/account-sidebar/account-sidebar.component.scss
@@ -12,13 +12,15 @@
     float: left;
 
     a {
+      width: 100%;
       text-decoration: none;
       color: #fff;
       margin: 10px;
       padding: 10px;
       border-radius: 5px;
+      font-size: 1rem;
       cursor: pointer;
-      background-color:#3498db;
+      background-color: #3498db;
       transition: background-color 0.3s;
 
       &:hover {
@@ -29,6 +31,10 @@
       div {
         margin-top: 5px;
         text-align: center;
+      }
+
+      i {
+        font-size: 1rem;
       }
     }
   }
