--- a/src/app/pages/components/account/userinfo/userinfo.component.html
+++ b/src/app/pages/components/account/userinfo/userinfo.component.html
@@ -22,16 +22,17 @@
             "userinfoForm.usernameLabel" | transloco
           }}</label>
         </span>
-        <span class="p-float-radio m-4" >
-          <!-- <div *ngFor="let gender of Genders" class="mr-2">
-            <p-radioButton
-              [inputId]="gender.key"
-              [value]="gender"
-              formControlName="gender"
-              styleClass="radio"
-            ></p-radioButton>
-            <label [for]="gender.key" class="mr-4">{{ gender.name }}</label>
-          </div> -->
+        <span class="p-float-label m-4">
+          <i class="pi pi-users" style="color: #000;"></i>
+          <p-dropdown
+            id="gender"
+            formControlName="gender"
+            placeholder="Select..."
+            styleClass="dropdown"
+            [options]="genders"
+            optionLabel="name"
+          ></p-dropdown>
+          <label htmlFor="gender" class="dropdown-label">Cinsiyet</label>
         </span>
         <span class="p-float-label m-4">
           <i class="pi pi-calendar" style="color: #000"></i>
@@ -41,9 +42,7 @@
             [showIcon]="false"
             id="calendar"
           ></p-calendar>
-          <label htmlFor="bDate">{{
-            "userinfoForm.date" | transloco
-          }}</label>
+          <label htmlFor="bDate">{{ "userinfoForm.date" | transloco }}</label>
         </span>
       </div>
       <div class="form-container">
@@ -76,8 +75,8 @@
           }}</label>
         </span>
       </div>
-      <div class="flex w-full justify-content-center">
-        <span class="button-style">
+      <div class="flex justify-content-center mt-4">
+        <span class="button-style w-full">
           <button pButton type="submit" (click)="updateUser()" class="button">
             {{ "userinfoForm.buttonLabel" | transloco }}
           </button>
