--- a/src/app/pages/components/favorites/default-favorites/default-favorites.component.html
+++ b/src/app/pages/components/favorites/default-favorites/default-favorites.component.html
@@ -2,14 +2,14 @@
   <div
     class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
   >
-    <div class="header-title block w-full m-3">
+    <div class="header-title block w-full">
       <h3>{{ "favoritesForm.header" | transloco }}</h3>
     </div>
     <div class="block m-3 justify-content-center">
       <div class="card flex justify-content-center">
       </div>
       <div class="card flex justify-content-center">
-        <h3>{{ "favoritesForm.title" | transloco }}</h3>
+        <i class="pi pi-heart-fill" style="font-size: 50px;"></i>
       </div>
       <div class="card flex justify-content-center text-xl">
         <h6>
