--- a/src/app/pages/components/orders/default-content/default-content.component.html
+++ b/src/app/pages/components/orders/default-content/default-content.component.html
@@ -1,9 +1,12 @@
 <div class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round">
-  <div class="header-title block w-full m-3">
+  <div class="header-title block w-full ">
     <h3>{{ "ordersForm.title" | transloco }}</h3>
   </div>
   <div class="block m-3 justify-content-center">
     <div class="card flex justify-content-center">
+      <div class="card flex justify-content-center">
+        <i class="pi pi-shopping-bag" style="font-size: 50px;"></i>
+      </div>
     </div>
     <div class="card flex justify-content-center text-xl">
       <h6>
