--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -11,33 +11,67 @@ $background-color: #ecf0f1;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding: 30px;
+  padding: 3px;
+}
+
+.search{
+  display: flex;
+  width: 50%;
+  margin: 16px;
+  float: right;
+}
+
+.category-filter{
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+  padding: 16px;
+
+  .title{
+    border: none;
+    background-color: transparent;
+    justify-content: start;
+  }
+
+  div{
+    height: 50px;
+    cursor: pointer;
+    display: flex;
+    width: 150px;
+    background-color: #fff;
+    margin: 15px;
+    color: #555;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border:1px solid #566;
+
+    &:hover {
+      border-color:$primary-color;
+    }
+  }
 }
 
 .product-card {
-  width: 300px;
-  margin: 16px;
+  width: 200px;
+  margin: 1px;
   padding: 16px;
+  max-height: 350px;
   background-color: #ffffff;
   box-shadow: 0 0 10px $dark-text;
   border-radius: 8px;
-  overflow: hidden;
-  transition: transform 0.3s ease-in-out;
-
-  &:hover {
-    transform: scale(1.05);
-  }
 
   .product-image {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    width: 100%;
+    height: 150px;
     img {
       max-width: 100%;
-      width: auto;
       max-height: 150px;
-      height: auto;
       object-fit: cover;
       border-radius: 8px;
     }
@@ -61,7 +95,15 @@ $background-color: #ecf0f1;
       font-weight: bold;
       margin-bottom: 16px;
     }
+    .add-to-cart[disabled] {
+      background-color: transparent;
+      color: #555;
+      font-weight: 600;
 
+      &:hover {
+        background-color:transparent;
+      }
+    }
     .add-to-cart {
       display: block;
       width: 100%;
@@ -100,6 +142,7 @@ $background-color: #ecf0f1;
   .p-rating{
     .p-icon{
       color: RGB(255,170,74);
+      width: 10px;
     }
   }
 }
