--- a/src/app/pages/components/product/card-detail/card-detail.component.scss
+++ b/src/app/pages/components/product/card-detail/card-detail.component.scss
@@ -4,47 +4,57 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
-.container{
-  width: 80%;
-  float: right;
-  margin: 10px;
-  padding: 10px;
-  background: transparent;
-}
 
+.image{
+  max-width: 500px;
+  max-height: 400px;
+}
 :host ::ng-deep{
 
+  .p-tabview{
+    max-width:100%;
+  }
+
   p-inputnumber , .p-inputnumber{
-    width: 85%;
+    max-width: 100%;
   }
   .p-icon{
     color: RGB(255,170,74);
+    max-width: 100%;
   }
   .valueInput{
-    width: 100%;
+    width:100%;
      input{
       width: 100%;
       font-size: 1rem;
-      border:1px solid $primary-color;
+      border:1px solid $dark-text;
       background-color: transparent;
       color: $dark-text;
       transition: border-color 0.3s;
 
       &:focus {
         outline: none;
-        border-bottom: 2px solid $secondary-color;
+        border-bottom: 2px solid $dark-text;
       }
      }
 
      .p-button{
-      background-color: #3498db;
-      border:1px solid $primary-color;
+      background-color: $dark-text;
+      border:none;
       width: 100%;
      }
   }
 
-  .p-add-button{
-    background-color:#3498db ;
+  .out-button{
+    max-width:100%;
+    width: 60%;
+    margin-right: 5px;
+  }
+
+  .add-to-cart{
+    background-color:$dark-text ;
     border: none;
+    width: 100%;
+    justify-content: center;
   }
 }
