--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
@@ -61,7 +61,8 @@
     border: 1px solid #e1e1e1;
     border-radius: 0.75rem;
     padding: 15px;
-    min-width: 250px;
+    width: 250px;
+    height: 350px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
 
@@ -75,10 +76,19 @@
     }
 
     // Resim stil
+   .relative{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 150px;
     img {
-      width: 100%;
-      border-radius: 0.75rem 0.75rem 0 0;
+      max-width: 100%;
+      max-height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
     }
+   }
 
     // Kategori etiketi stil
     .category-label {
@@ -136,10 +146,8 @@
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-    margin-left: -15px;
-    margin-right: -15px;
+
+
   }
 }
 
