--- a/src/app/pages/components/carts/content-carts/content-carts.component.html
+++ b/src/app/pages/components/carts/content-carts/content-carts.component.html
@@ -4,13 +4,42 @@
   <ul class="list-none p-0 m-0">
     <li
       *ngFor="let product of products"
-      class="flex flex-column md:flex-row py-6 border-top-1 border-bottom-1 surface-border md:align-items-center"
+      class="flex flex-column md:flex-row border-top-1 border-bottom-1 surface-border md:align-items-center"
     >
       <img
         [src]="getFileUrl(product?.file)"
-        class="w-12rem flex-shrink-0 mx-auto md:mx-0"
+        class="w-12rem flex-shrink-0 mx-2 md:mx-2"
       />
-      <div class="flex-auto py-5 md:pl-5">
+      <div class="flex flex-row justify-content-between align-items-center w-full">
+        <div class="flex flex-column">
+            <span class="inline-flex align-items-center mb-3">
+              <i class="pi pi-envelope text-700 mr-2"></i>
+              <span class="text-700 mr-2">{{
+                product?.name
+              }}</span>
+            </span>
+          <span class="inline-flex align-items-center mb-3">
+            <i class="pi pi-envelope text-700 mr-2"></i>
+            <span class="text-700 mr-2">{{product?.email}}</span>
+          </span>
+          <span class="inline-flex align-items-center mb-3">
+            <i class="pi pi-send text-700 mr-2"></i>
+            <span class="text-700 mr-2"
+              >Company Name:  <span class="font-bold">{{product?.companyName}}</span></span
+            >
+          </span>
+          <span class="flex flex-row align-items-center mb-3">
+            <i class="pi pi-exclamation-triangle text-700 mr-2"></i>
+            <span class="text-700">Only Available.</span>
+          </span>
+          <span class="flex flex-row align-items-center mb-3">
+            <i class="pi pi-envelope text-700 mr-2"></i>
+           <span class="text-700 mr-2">
+            Quantity:  <span class="text-900"> {{product?.quantity | number}}</span>
+           </span>
+
+          </span>
+        </div>
         <div
           class="flex flex-wrap align-items-start sm:align-items-center sm:flex-row sm:justify-content-between surface-border pb-6"
         >
@@ -29,33 +58,6 @@
               >
             </div>
           </div>
-        </div>
-        <div class="flex flex-column">
-            <span class="inline-flex align-items-center mb-3">
-              <i class="pi pi-envelope text-700 mr-2"></i>
-              <span class="text-700 mr-2">{{
-                product?.name
-              }}</span>
-            </span>
-          <span class="inline-flex align-items-center mb-3">
-            <i class="pi pi-envelope text-700 mr-2"></i>
-            <span class="text-700 mr-2">{{product?.email}}</span>
-          </span>
-          <span class="inline-flex align-items-center mb-3">
-            <i class="pi pi-send text-700 mr-2"></i>
-            <span class="text-700 mr-2"
-              >Company Name:  <span class="font-bold">{{product?.companyName}}</span></span
-            >
-          </span>
-          <span class="flex align-items-center">
-            <i class="pi pi-exclamation-triangle text-700 mr-2"></i>
-            <span class="text-700">Only Available.</span>
-          </span>
-          <span class="flex align-items-center">
-            <h6>Quantity:</h6>
-            <span class="text-900"> {{product?.quantity | number}}</span>
-          </span>
-
         </div>
       </div>
     </li>
